- ayah's have link (discuss, maybe not needed) - Fix audio player playing text - Remove unneeded padding on mobile - Hide Share on mobile devices (native share is built into the browsers)

--- a/src/components/Audioplayer/style.scss
+++ b/src/components/Audioplayer/style.scss
@@ -33,7 +33,6 @@
   text-align: center;
 
   :global(li){
-    padding-left: 15px;
     padding-right: 15px;
     display: table-cell;
   }
