--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -5,6 +5,10 @@
     padding: 50px 0px;
     font-size: 14px;
     margin: 0px;
+
+    @media(max-width: $screen-xs-max) {
+      padding: 10px 0;
+    }
   }
 
   .lastVisit{
